<resources>
    <string name="app_name">cal-4</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="tree">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>


    <string name="clear">C</string>
    <string name="clear2">CE</string>
    <string name="exponent">^</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="add">+</string>
    <string name="substract">-</string>
    <string name="plusMinus">+\-</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="virgul">,</string>

    <string name="backspace"></string>
    <string name="display">0</string>

    <string name="percent">%</string>
    <string name="reverse">1/x</string>
    <string name="squareroot">√x</string>
    <string name="square">x²</string>


</resources>