<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input"
        app:layout_constraintVertical_bias="0.98"
        tools:layout_editor_absoluteX="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_percent"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="button_percent"
                android:text="@string/percent"
                android:textColor="@color/white"
                android:textSize="29sp" />

            <Button
                android:id="@+id/button_clear2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="button_clear2"
                android:text="@string/clear2"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <Button
                android:id="@+id/button_clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="button_clear"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/button_backspace"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:contentDescription="@string/backspace"
                android:onClick="button_backspace"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:srcCompat="@drawable/backspace" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_reverse"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="button_square"
                android:text="@string/reverse"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_square"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="button_squareroot"
                android:text="@string/square"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_squareroot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:layout_margin="3dp"
                android:text="@string/squareroot"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_divide"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="button_divide"
                android:text="@string/divide"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="button_seven"
                android:text="@string/seven"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="button_eight"
                android:text="@string/eight"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="button_nine"
                android:text="@string/nine"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_multiply"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="button_multiply"
                android:text="@string/multiply"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="button_four"
                android:text="@string/four"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="button_five"
                android:text="@string/five"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="button_six"
                android:text="@string/six"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_subtract"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="button_subtract"
                android:text="@string/substract"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_one"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="button_one"
                android:text="@string/one"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="button_two"
                android:text="@string/two"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_tree"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="button_tree"
                android:text="@string/tree"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_add"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="button_add"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_plusMinus"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="button_plusMinus"
                android:text="@string/plusMinus"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="button_zero"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_virgul"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:onClick="button_virgul"
                android:text="@string/virgul"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <Button
                android:id="@+id/button_equals"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="@drawable/circle"
                android:backgroundTint="#FF9800"
                android:onClick="button_equals"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="50sp"
        android:textAlignment="textEnd"
        android:autofillHints="false"
        android:inputType="none"
        tools:ignore="LabelFor" />
</androidx.constraintlayout.widget.ConstraintLayout>